--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Position Examples</title>
     
 </head>
 <body>
+    <div class="home">
+        <h2>Home</h2>
+        <div class="school">
+            <h2>School</h2>
+            <p>Child</p>
+        </div>
+    </div>
+    <!-- <header>
+        <h1>Header section</h1>
+    </header>
     <div class="container">
         <h2>Heading 2</h2>
-    </div>
+    </div> -->
 </body>
 </html>
